Remove check for client registration in StatusUploader ctor

StatusUploader's work makes sence only if working on managed device with
resitered client, but due to some missynchonizations we may not know
if it's registered client when creating StatusUploader. That's why there
is an extra registered check before submitting status. See more in:
https://bugs.chromium.org/p/chromium/issues/detail?id=705607

Therefore check in StatusUploader constructor is redundant and causes
only problems when dchecks are enabled:
https://bugs.chromium.org/p/chromium/issues/detail?id=912770

Bug: 912770
Change-Id: Ib9c4001b87834286a36cbe3ca123f1c456844ad9
Reviewed-on: https://chromium-review.googlesource.com/c/1400664
Reviewed-by: Maksim Ivanov <emaxx@chromium.org>
Commit-Queue: Oleg Davydov <burunduk@google.com>
Cr-Commit-Position: refs/heads/master@{#623183}
Former-commit-id: 43132ffeb2245cfc7996e11acfeffb163ab0a380