chrome/browser/chromeos/policy/status_uploader.cc
@@ -47,16 +47,6 @@ StatusUploader::StatusUploader(
       upload_frequency_(default_upload_frequency),
       has_captured_media_(false),
       weak_factory_(this) {
-  // StatusUploader is currently only created for registered clients, and
-  // it is currently safe to assume that the client will not unregister while
-  // StatusUploader is alive.
-  //
-  // If future changes result in StatusUploader's lifetime extending beyond
-  // unregistration events, then this class should be updated
-  // to skip status uploads for unregistered clients, and to observe the client
-  // and kick off an upload when registration happens.
-  DCHECK(client->is_registered());
-
   // Track whether any media capture devices are in use - this changes what
   // type of information we are allowed to upload.
   MediaCaptureDevicesDispatcher::GetInstance()->AddObserver(this);
